Adicionando keys e classes no html e css

--- a/Javascript-Drum-Kit/index.html
+++ b/Javascript-Drum-Kit/index.html
@@ -11,47 +11,47 @@
 
     <div class="keys">
 
-       <div>
+       <div class="key">
            <h1>A</h1>
            <span>clap</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>S</h1>
            <span>hihat</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>D</h1>
            <span>kick</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>F</h1>
            <span>openhat</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>G</h1>
            <span>boom</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>H</h1>
            <span>ride</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>J</h1>
            <span>snare</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>K</h1>
            <span>tom</span>
        </div>
 
-       <div>
+       <div class="key">
            <h1>L</h1>
            <span>tink</span>
        </div>
