--- a/Javascript-CSS-Clock/index.html
+++ b/Javascript-CSS-Clock/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript + Css Clock</title>
+    <link rel="stylesheet" href="style/style.css">
+    <script src="js/script.js"></script>
 </head>
+
 <body>
-    
+    <section class="clock">
+        <div class="clock-face">
+            <div class="pointer clock_hours"></div>
+            <div class="pointer clock_minutes"></div>
+            <div class="pointer clock_seconds"></div>
+        </div>
+    </section>
 </body>
+
 </html>
