Adicionando card de nova pagina - CLOCK

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafios de JS em 30 dias</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <header class="header">
         <h1 class="header__title">Desafios de Javascript Vanilla em 30 dias</h1>
@@ -14,8 +16,16 @@
     <main class="cards">
         <div class="challenge">
             <a href="Javascript-Drum-Kit/index.html">
-                <img class="img-responsive" src="assets/heron-rossato-h_rossato-g8sB_Dp5h84-unsplash.jpg" alt="Foto de uma bateria por Heron Rossato @h_rossato on Unsplash">
+                <img class="img-responsive" src="assets/heron-rossato-h_rossato-g8sB_Dp5h84-unsplash.jpg"
+                    alt="Foto de uma bateria por Heron Rossato @h_rossato on Unsplash">
                 <p class="challenge__text">Dums Kit</p>
+            </a>
+        </div>
+
+        <div class="challenge">
+            <a href="Javascript-CSS-Clock/index.html">
+                <img class="img-responsive" src="assets/ocean-ng-L0xOtAnv94Y-unsplash.jpg" alt="Photo by Ocean Ng on Unsplash">
+                <p class="challenge__text">Clock</p>
             </a>
         </div>
     </main>
@@ -24,4 +34,5 @@
         <p>Desafios propostos por <a href="https://javascript30.com/" target="blank">Javascript30</a></p>
     </footer>
 </body>
+
 </html>
