Adicionando função para mudar as propriedades de CSS usando variáveis

--- a/Javascript-Playing-with-CSS-Variables-and-JS/index.html
+++ b/Javascript-Playing-with-CSS-Variables-and-JS/index.html
@@ -15,14 +15,14 @@
         <label for="spacing">Margem:</label>
         <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
-        <label for="blur">Embaçar:</label>
-        <input type="range" name="blur" min="0" max="25" value="10"  data-sizing="px">
+        <label for="grayscale">Descolorir:</label>
+        <input type="range" name="grayscale" min="0" max="100" value="0"  data-sizing="%">
 
         <label for="base">Cor:</label>
         <input type="color" name="base" value="#ffc600">
     </div>
 
-    <img src="assets/thiago-japyassu-l7fds9EoG1g-unsplash.jpg" alt="Photo by thiago japyassu on Unsplash">
+    <img class="img-center" src="assets/thiago-japyassu-l7fds9EoG1g-unsplash.jpg" alt="Photo by thiago japyassu on Unsplash">
     
 </body>
 </html>
