--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 <p class="challenge__text">Clock</p>
             </a>
         </div>
+
+        <div class="challenge">
+            <a href="Javascript-Playing-with-CSS-Variables-and-JS/index.html">
+                <img class="img-responsive" src="https://images.unsplash.com/photo-1577039508937-99c3b639ba77?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80" alt="Photo by thiago japyassu on Unsplash">
+                <p class="challenge__text">Playing with CSS Variables and JS</p>
+            </a>
+        </div>
     </main>
 
     <footer class="footer">
@@ -36,3 +43,8 @@
 </body>
 
 </html>
+
+
+
+
+Playing with CSS Variables and JS
