Adicionandi=o pasta de paineis com flexbox

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 <p class="challenge__text">Playing with CSS Variables and JS</p>
             </a>
         </div>
+        <div class="challenge">
+            <a href="Flex-panels/index.html">
+                <img class="img-responsive" src="Flex-panels/assets/jasmin-chew-3fzGAJJw3oI-unsplash.jpg" alt="Photo by thiago japyassu on Unsplash">
+                <p class="challenge__text">Flex Panels</p>
+            </a>
+        </div>
     </main>
 
     <footer class="footer">
