Desafio 7 completo, usar api do ibge para buscar cidades

--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
                 <p class="challenge__text">Playing with CSS Variables and JS</p>
             </a>
         </div>
+
         <div class="challenge">
             <a href="Flex-panels/index.html">
                 <img class="img-responsive" src="Flex-panels/assets/jasmin-chew-3fzGAJJw3oI-unsplash.jpg" alt="Photo by thiago japyassu on Unsplash">
                 <p class="challenge__text">Flex Panels</p>
+            </a>
+        </div>
+        
+        <div class="challenge">
+            <a href="Ajax-Type-Ahead/index.html">
+                <img class="img-responsive" src="assets/timj-EJ4qfFp1g8Q-unsplash.jpg" alt="Photo by timJ on Unsplash">
+                <p class="challenge__text">Cities Search</p>
             </a>
         </div>
     </main>
@@ -52,5 +60,3 @@
 
 
 
-
-Playing with CSS Variables and JS
